chore: add surefire and failsafe